Closed Bug 1800416 Opened 3 years ago Closed 3 years ago

Maximizing minimized fullscreen window trigger white bars around it

Categories

(Core :: Widget: Win32, defect)

Firefox 108
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- verified
firefox109 --- verified

People

(Reporter: kenshikens, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image exp1.png

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:108.0) Gecko/20100101 Firefox/108.0

Steps to reproduce:

  1. Enter fullscreen, (F11)
  2. Minimize browser window or open different app,
  3. Open browser window from the taskbar.

Actual results:

White bars appear around the window (see exp1.png)

Expected results:

No white bars around the window

Steps to reproduce:

  1. Disable native titlebar if any (default)
  2. Enter fullscreen, (F11)
  3. Minimize the Nightly window
  4. Click the Nightly task button in taskbar

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=98e7f7bfffc4f9f164b985d51a11feaeec37dd7f&tochange=ae18bb00fae2a2d15ed7817e4178fddf2ddecbb3

Status: UNCONFIRMED → NEW
Has STR: --- → yes
Component: Untriaged → Widget: Win32
Ever confirmed: true
Keywords: regression
OS: Unspecified → Windows 10
Product: Firefox → Core
Regressed by: 1797463
Hardware: Unspecified → Desktop

:emilio, since you are the author of the regressor, bug 1797463, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

FYI, Firefox 107 RC is not affected by the uplift patch in bug 1797463.

When minimizing a fullscreen window, frame state is kept with
mFullscreenMode = true but mSizeMode = nsSizeMode_Minimized.

Calling EnsureSizeMode(nsSizeMode_Fullscreen) in this state would call
EnsureFullscreenMode(true), but that'd bail out without actually
setting the fullscreen sizemode, causing confusion.

Before the regressing patch that was papered over because
nsSizeMode_Fullscreen was passed explicitly to OnSizeModeChange(), but
the underlying state was already wrong before my patch.

Add some comments and documentation to the fullscreen-relevant members,
since initially I was rather confused about this code.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7ae4a0fd85bf Ensure setting fullscreen actually ends up with a fullscreen sizemode. r=mhowell
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch

Comment on attachment 9303258 [details]
Bug 1800416 - Ensure setting fullscreen actually ends up with a fullscreen sizemode. r=cmartin,mhowell

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very well-targeted patch.
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9303258 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9303258 [details]
Bug 1800416 - Ensure setting fullscreen actually ends up with a fullscreen sizemode. r=cmartin,mhowell

Approved for 108.0b2

Attachment #9303258 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced the issue with Firefox 108.0a1 on Windows 10x64 by following the STR from comment 0 and comment 1.
The issue is verified fixed with Firefox 109.0a1 (20221114214403) and Firefox 108.0b1 (20221115015959) treeherder build from comment 9 on Windows 10x64, Windows 11x64 and Windows 7x64. The white bars are no longer displayed after following the steps from comment 1.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Regressions: 1806438
Regressions: 1809757
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: