Bug 1800416 - Ensure setting fullscreen actually ends up with a fullscreen sizemode. r=mhowell, a=dsmith

When minimizing a fullscreen window, frame state is kept with
mFullscreenMode = true but mSizeMode = nsSizeMode_Minimized.

Calling EnsureSizeMode(nsSizeMode_Fullscreen) in this state would call
EnsureFullscreenMode(true), but that'd bail out without actually
setting the fullscreen sizemode, causing confusion.

Before the regressing patch that was papered over because
nsSizeMode_Fullscreen was passed explicitly to OnSizeModeChange(), but
the underlying state was already wrong before my patch.

Add some comments and documentation to the fullscreen-relevant members,
since initially I was rather confused about this code.

Differential Revision: https://phabricator.services.mozilla.com/D161982