widget/windows/nsWindow.h
@@ -474,7 +474,12 @@ class nsWindow final : public nsBaseWidget {
 
     nsSizeMode mSizeMode = nsSizeMode_Normal;
     nsSizeMode mLastSizeMode = nsSizeMode_Normal;
+    // The old size mode before going into fullscreen mode. This should never
+    // be nsSizeMode_Fullscreen.
     nsSizeMode mOldSizeMode = nsSizeMode_Normal;
+    // Whether we're in fullscreen. We need to keep this state out of band,
+    // rather than just using mSizeMode, because a window can be minimized
+    // while fullscreen, and we don't store the fullscreen state anywhere else.
     bool mFullscreenMode = false;
     nsWindow* mWindow;
   };
